Added new images and content

--- a/index.html
+++ b/index.html
@@ -87,6 +87,26 @@
         </div> <!-- /.site-main -->
 
         <div class="content-section" id="overview">
+
+            <div class="container">
+                    <!-- Main jumbotron for a primary marketing message or call to action -->
+                    <div class="jumbotron">
+                        <div class="container">
+                            <h1>Build your Content Platform
+                                Faster with TransomJS
+                            </h1>
+                            <p>
+                            TransomJS allows developers to create beautiful REST-APIs with simple metadata. Turn an empty Restify server into a full-fledged API in minutes.
+                            Need something more? Go ahead, there are lots of built-in integration points and nothing in your way to write your own custom endpoints.             
+                            </p>
+                            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+                        </div>
+                    </div>
+                    <!-- /.jumbotron -->
+                </div>
+            </div>
+                    
+                
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -98,14 +118,13 @@
                         TransomJS is based on plugins from the ground up. Everything is a plugin and can be modified or replaced. 
                         It is understood that every application has some special sauce that does not come from the framework!  
 <hr>
-                        Why should you use TransomJS:
+                        Why use TransomJS?
                         <ul class="list-group">
-                            <li class="list-group-item">Spend your time on your special sauce</li>
-                            <li class="list-group-item">Don't re-invent the wheel</li>
-                            <li class="list-group-item">Fewer bugs in less code, all the transomJS code is pre-tested!</li>
-                            <li class="list-group-item">Designed to be scalable</li>
-                            <li class="list-group-item">Security is a solved problem</li>
-                            <li class="list-group-item">...</li>
+                            <li class="list-group-item">Total control. Your Data. Your API. Your App.</li>
+                            <li class="list-group-item">Spend time on what makes your App special.</li>
+                            <li class="list-group-item">Don't re-invent the wheel building common use-cases.</li>
+                            <li class="list-group-item">Less code means faster development and fewer bugs!</li>
+                            <li class="list-group-item">Designed to be scalable.</li>
                         </ul>
                     </div>
                 </div>
@@ -117,20 +136,24 @@
                 <div class="row">
                     <div class="heading-section col-md-12 text-center">
                         <h2>Getting Started</h2>
-                        <p>This section is still a work in progress. In the mean time use the links in
-                             the documentation section to get going.</p>
+                        <p>TransomJS lets you get going quickly without limiting your ability to do your own thing.
+                            If you need to connect to your data from multiple applications, or simply add some dynamic 
+                            content to an otherwise static site. Build the SPA or mobile application
+                            front-end that you need and let TransomJS supply it with data!
+                        </p>
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item" id="service-1">
                             <div class="service-icon">
-                                <i class="fa fa-file-code-o"></i>
+                                <i class="fa fa-github"></i>
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>Seed application from Github</h3>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p> 
+                                   <h3>Open source on GitHub</h3>
+                                   <p>Released under the MIT License and hosted on GitHub, there's no secrets here!</p> 
+                                   <p>Find a bug or need a feature? Submit a PR, we're happy to have you onboard!</p> 
                                 </div>
                             </div> <!-- /.service-content -->
                         </div> <!-- /#service-1 -->
@@ -138,12 +161,13 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item" id="service-2">
                             <div class="service-icon">
-                                <i class="fa fa-paper-plane-o"></i>
+                                <i class="fa fa-desktop"></i>
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>Online Sample App</h3>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p> 
+                                    <h3>Online Sample App</h3>
+                                    <p>There's no better way to see how it works, than getting your hands on a well written sample application.</p>
+                                    <p>With our app, we've tried to demonstrate the power of TransomJS without too much clutter.</p> 
                                 </div>
                             </div> <!-- /.service-content -->
                         </div> <!-- /#service-1 -->
@@ -151,12 +175,13 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item" id="service-3">
                             <div class="service-icon">
-                                <i class="fa fa-institution"></i>
+                                <i class="fa fa-code"></i>
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>Get the client sdk of your choice</h3>
-                                   <p>We have an Angular 4 and up client, as well as a straight up javascript client. Feel free to contribute any other client!</p> 
+                                   <h3>Get the SDK that suits your App</h3>
+                                   <p>Try out the JavaScript client, or one that's specific to Angular.</p> 
+                                   <p>Didn't see the one you needed and wrote your own? We'd love to see it and maybe even share with others!</p>
                                 </div>
                             </div> <!-- /.service-content -->
                         </div> <!-- /#service-1 -->
@@ -164,12 +189,13 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item" id="service-4">
                             <div class="service-icon">
-                                <i class="fa fa-flask"></i>
+                                <i class="fa fa-book"></i>
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
                                    <h3>Review the documentation</h3>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p> 
+                                   <p>We know that documentation means everything for a project like this and are working hard to keep it up to date!</p> 
+                                   <p>Don't write code but want to contribute? That'd be amazing! Drop us a line.</p>
                                 </div>
                             </div> <!-- /.service-content -->
                         </div> <!-- /#service-1 -->
@@ -190,9 +216,9 @@
                 </div> <!-- /.row -->
                 <div class="row">
                     <div class="documentation-item col-md-3 col-sm-6">
-                        <div class="documentation-title">Transom Core</div>
+                        <div class="documentation-title">Core</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p1.jpg" alt="">
+                            <img src="images/gallery/core.jpg" alt="">
                             <div class="documentation-overlay">
                                 <p>The transom core is the heart of the application. All other plugins are 
                                     registered with the core. 
@@ -204,13 +230,12 @@
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
-                        <div class="documentation-title">MongoDB</div>
+                        <div class="documentation-title">Storage</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p2.jpg" alt="">
+                            <img src="images/gallery/storage.jpg" alt="">
                             <div class="documentation-overlay">
-                                <p>The Transom mongoose plugin provides ready to use CRUD endpoints for all 
-                                    your data interactions backed by a Mongo database. Sophisticated querying,
-                                    paging and sorting is all included, without writing any code.
+                                <p>The Transom mongoose plugin provides ready to use mongoose models and CRUD endpoints for all 
+                                    your data. Sophisticated querying, paging and sorting is all included, without writing any code.
                                 </p>
                                 <a href="https://github.com/transomjs/transom-mongoose/blob/master/README.md" target="_blank" class="expand">
                                     Details <i class="fa fa-search"></i>
@@ -221,9 +246,9 @@
                     <div class="documentation-item col-md-3 col-sm-6">
                         <div class="documentation-title">Security</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p7.jpg" alt="">
+                            <img src="images/gallery/security.jpg" alt="">
                             <div class="documentation-overlay">
-                                <p>Implement industry standard security. Choose which endpoints to secure. Apply
+                                <p>Implement industry standard security. Choose which endpoints to secure and apply
                                     fine grained security to your data!
                                 </p>
                                 <a href="https://github.com/transomjs/transom-mongoose-localuser/blob/master/README.md" target="_blank" class="expand">
@@ -235,9 +260,9 @@
                     <div class="documentation-item col-md-3 col-sm-6">
                             <div class="documentation-title">Email</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p8.jpg" alt="">
+                            <img src="images/gallery/mail.jpg" alt="">
                             <div class="documentation-overlay">
-                                <p>Add email functionality to your application, just supply the configuration data.</p>
+                                <p>Add email functionality to your application and send nicely formatted email with SMTP.</p>
                                 <a href="https://github.com/transomjs/transom-smtp/blob/master/README.md" target="_blank" class="expand">
                                     Details <i class="fa fa-search"></i>
                                 </a>
@@ -245,13 +270,13 @@
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
-                            <div class="documentation-title">Custom Server Functions</div>
+                            <div class="documentation-title">DIY Server Functions</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p3.jpg" alt="">
+                            <img src="images/gallery/diy.jpg" alt="">
                             <div class="documentation-overlay">
-                                <p>Create your own end points and write your own code. Use all of the functionality
-                                    provided by all the Transom plugins. Your own end points are easily secured, can send
-                                    email, access the database and do anything a plugin can do.
+                                <p>We understand that applications are far more than a collection of CRUD operations. 
+                                    Create your own end points and write your own code. Use all of the functionality
+                                    provided by the Transom plugins.
                                 </p>
                                 <a href="https://github.com/transomjs/transom-server-functions/blob/master/README.md" target="_blank" class="expand">
                                     <i class="fa fa-search"></i>
@@ -262,10 +287,10 @@
                     <div class="documentation-item col-md-3 col-sm-6">
                         <div class="documentation-title">Socket IO</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p4.jpg" alt="">
+                            <img src="images/gallery/socket.jpg" alt="">
                             <div class="documentation-overlay">
-                                <p>Add secure Websockets for asynchronous communications. Have your server call you back when a process finishes.
-                                    Synchronize your data across multiple clients in real time! </p>
+                                <p>Add secure Websockets for asynchronous communications. Have your server call you back when a process finishes 
+                                    or synchronize your data across multiple clients in real time! </p>
                                 <a href="https://github.com/transomjs/transom-socketio-internal/blob/master/README.md" target="_blank" class="expand">
                                    Details <i class="fa fa-search"></i>
                                 </a>
@@ -273,11 +298,11 @@
                         </div> <!-- /.documentation-thumb -->
                     </div> <!-- /.documentation-item -->
                     <div class="documentation-item col-md-3 col-sm-6">
-                        <div class="documentation-title">Templated Content</div>
+                        <div class="documentation-title">Templates</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p5.jpg" alt="">
+                            <img src="images/gallery/template.jpg" alt="">
                             <div class="documentation-overlay">
-                                <p>Create and use templates for emails and even HTML content to create custom workflows for your application.</p>
+                                <p>Create and use templates for emails and HTML content to create custom workflows for your application.</p>
                                 <a href="https://github.com/transomjs/transom-ejs-template/blob/master/README.md" target="_blank" class="expand">
                                     Details <i class="fa fa-search"></i>
                                 </a>
@@ -287,9 +312,9 @@
                     <div class="documentation-item col-md-3 col-sm-6">
                         <div class="documentation-title">Static Content</div>
                         <div class="documentation-thumb">
-                            <img src="images/gallery/p6.jpg" alt="">
+                            <img src="images/gallery/static.jpg" alt="">
                             <div class="documentation-overlay">
-                                <p>Serve static content like application assets from your api server.</p>
+                                <p>Serve static content such as images, CSS, or JavaScript, right from your api server.</p>
                                 <a href="https://github.com/transomjs/transom-scaffold/blob/master/README.md" target="_blank" class="expand">
                                     <i class="fa fa-search"></i>
                                 </a>
