first version for deploy

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                                         <li class="active"><a href="#">Home</a></li>
                                         <li><a href="#gettingstarted">Getting Started</a></li>
                                         <li><a href="#documentation">Documentation</a></li>
-                                        <li><a href="#our-team">Contributors</a></li>
-                                        <li><a href="#contact">Requests</a></li>                                 
+                                        <!-- <li><a href="#our-team">Contributors</a></li>
+                                        <li><a href="#contact">Requests</a></li>                                  -->
                                     </ul>                                    
                                 </div> <!-- /.main-menu -->
                             </div> <!-- /.row -->
@@ -303,7 +303,7 @@
 
 
 
-        <div class="content-section" id="our-team">
+        <div class="content-section" id="our-team" style="display:none;">
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-center">
@@ -411,7 +411,7 @@
             </div> <!-- /.container -->
         </div> <!-- /#our-team -->
 
-        <div class="content-section" id="contact">
+        <div class="content-section" id="contact" style="display:none;">
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-center">
@@ -466,7 +466,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-xs-12 text-left">
-                        <span>Copyright &copy; 2014 Company Name</span>
+                        <span>Copyright &copy; 2018 Binaryops Software Inc.</span>
                   </div> <!-- /.text-center -->
                     <div class="col-md-4 hidden-xs text-right">
                         <a href="#top" id="go-top">Back to top</a>
