--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             TransomJS allows developers to create beautiful REST-APIs with simple metadata. Turn an empty Restify server into a full-fledged API in minutes.
                             Need something more? Go ahead, there are lots of built-in integration points and nothing in your way to write your own custom endpoints.             
                             </p>
-                            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+                            <p><a class="btn btn-primary btn-lg" href="#documentation" role="button">Learn more &raquo;</a></p>
                         </div>
                     </div>
                     <!-- /.jumbotron -->
@@ -111,16 +111,15 @@
                 <div class="row">
                     <div class="heading-section col-md-12">
                         <p>
-                        TransomJS is a rapid API development framework. Transom applications use metadata to 
-                        configure pre-built and tested modules that allow developers to quickly piece together services 
-                        that 'just work'.<br/>
-                         All transom applications are deployable and scalable on all the major hosting
-                        platforms.<br/>
-                        Using all standard Node libraries like Restify and Passport, you get all the benefits with minimal effort.
-                        TransomJS is based on plugins from the ground up. <br/>
-                        Everything is a plugin and can be modified or replaced. 
-                        It is understood that every application has some special sauce that does not come from the framework!  </p>
-                       
+                        TransomJS is a rapid API development framework built on top of Restify. 
+                        Transom uses metadata to configure pre-built and tested modules that allow developers to quickly piece together services that 'just work'. 
+                        Transom applications are deployable anywhere you can run NodeJS.
+                        Using standard Node libraries like Restify, Mongoose and Passport, you get all the benefits with minimal effort.
+                        TransomJS is based on plugins from the ground up allowing new ones to be added and existing ones to get modified or replaced.
+                        <br />
+                        <br />
+                        We understand that every application is going to have some special sauce that does 
+                        not come from the framework and we've made sure it doesn't get in your way!</p>
                     </div>
                 </div>
             </div>
