--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <p>TransomJS lets you get going quickly without limiting your ability to do your own thing.
                             If you need to connect to your data from multiple applications, or simply add some dynamic 
                             content to an otherwise static site. Build the SPA or mobile application
-                            front-end that you need and let TransomJS supply it with data!
+                            front-end that you need and let TransomJS supply it with data! <a href="https://github.com/transomjs/transom-core#example-apps">Here are some simple examples to get you going.</a>
                         </p>
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
@@ -107,11 +107,14 @@
                         <div class="service-item" id="service-1">
                             <div class="service-icon">
                                 <i class="fa fa-github"></i>
-                            </div> <!-- /.service-icon -->
+                             </div> <!--/.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
                                    <h3>Open source on GitHub</h3>
                                    <p>Released under the MIT License and hosted on GitHub, there's no secrets here!</p> 
+                                   <p>The <a href="https://github.com/transomjs">TransomJS page</a> on gitgub is a good place to start, from there you can find
+                                       all the repos and plugins
+                                   </p>
                                    <p>Find a bug or need a feature? Submit a PR, we're happy to have you onboard!</p> 
                                 </div>
                             </div> <!-- /.service-content -->
@@ -126,7 +129,8 @@
                                 <div class="inner-service">
                                     <h3>Online Sample App</h3>
                                     <p>There's no better way to see how it works, than getting your hands on a well written sample application.</p>
-                                    <p>With our app, we've tried to demonstrate the power of TransomJS without too much clutter.</p> 
+                                    <p>We've tried to demonstrate the power of TransomJS without too much clutter.</p> 
+                                    <p><a href="https://github.com/transomjs/transom-core#example-apps">Find a list of example apps here</a></p>
                                 </div>
                             </div> <!-- /.service-content -->
                         </div> <!-- /#service-1 -->
@@ -139,8 +143,9 @@
                             <div class="service-content">
                                 <div class="inner-service">
                                    <h3>Get the SDK that suits your App</h3>
-                                   <p>Try out the JavaScript client, or one that's specific to Angular.</p> 
-                                   <p>Didn't see the one you needed and wrote your own? We'd love to see it and maybe even share with others!</p>
+                                   <p>We're working generic clients for TransomJS APIs for Agular, Vue, straight Jvascript, React etc.</p>
+                                   <p>Check back here for updates</p> 
+                                   <p>Did you write your own? We'd love to see it and maybe even share with others!</p>
                                 </div>
                             </div> <!-- /.service-content -->
                         </div> <!-- /#service-1 -->
@@ -153,7 +158,7 @@
                             <div class="service-content">
                                 <div class="inner-service">
                                    <h3>Review the documentation</h3>
-                                   <p>We know that documentation means everything for a project like this and are working hard to keep it up to date!</p> 
+                                   <p>We know that documentation means everything for a project like this and are working hard to keep the READMEs up to date!</p>
                                    <p>Don't write code but want to contribute? That'd be amazing! Drop us a line.</p>
                                 </div>
                             </div> <!-- /.service-content -->
@@ -255,7 +260,7 @@
                                     provided by the Transom plugins.
                                 </p>
                                 <a href="https://github.com/transomjs/transom-server-functions/blob/master/README.md" target="_blank" class="expand">
-                                    <i class="fa fa-search"></i>
+                                   Details <i class="fa fa-search"></i>
                                 </a>
                             </div> <!-- /.documentation-overlay -->
                         </div> <!-- /.documentation-thumb -->
@@ -292,7 +297,7 @@
                             <div class="documentation-overlay">
                                 <p>Serve static content such as images, CSS, or JavaScript, right from your api server.</p>
                                 <a href="https://github.com/transomjs/transom-scaffold/blob/master/README.md" target="_blank" class="expand">
-                                    <i class="fa fa-search"></i>
+                                  Details <i class="fa fa-search"></i>
                                 </a>
                             </div> <!-- /.documentation-overlay -->
                         </div> <!-- /.documentation-thumb -->
