--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>TransomJS - The Rapid API development framework.</h1>
+        <h1>TransomJS - Uncompromising Rapid API development on Node</h1>
         <p>
             TransomJS allows developers to create beautiful REST-APIs with simple metadata. Turn an empty Restify server into a full-fledged API in minutes.
             Need something more? Go ahead, there are lots of built-in integration points and nothing in your way to write your own custom endpoints.             
@@ -12,7 +12,6 @@ layout: default
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
     </div>
 </div>
-
 
 <div class="container">
 
@@ -22,8 +21,8 @@ layout: default
             <blockquote>
               <p>
                 TransomJS is a rapid API development framework built on top of Restify. 
-                Transom uses metadata to configure pre-built and tested modules that allow developers to quickly piece together services that 'just work'. 
-                Transom applications are deployable anywhere you can run NodeJS.
+                Transom uses metadata to configure pre-built and tested plugins that allow developers to quickly compose services that 'just work'. 
+                Transom applications are deployable and scalable anywhere you can run NodeJS.
                 Using standard Node libraries like Restify, Mongoose and Passport, you get all the benefits with minimal effort.
                 TransomJS is based on plugins from the ground up allowing new ones to be added and existing ones to get modified or replaced.
                 <br />
