--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ layout: default
             <blockquote>
               <p>
                 TransomJS is a rapid API development framework built on top of Restify. 
-                Transom uses metadata to configure pre-built and tested plugins that allow developers to quickly compose services that 'just work'. 
+                Quickly compose services that 'just work' using pre-built plugins configured with metadata.
                 Transom applications are deployable and scalable anywhere you can run NodeJS.
-                Using standard Node libraries like Restify, Mongoose and Passport, you get all the benefits with minimal effort.
-                TransomJS is based on plugins from the ground up allowing new ones to be added and existing ones to get modified or replaced.
+                Using standard Node libraries like Restify, Mongoose and Passport, TransomJS gives you all the benefits with minimal effort.
+                TransomJS is based on plugins from the ground up, allowing new ones to be added and existing ones to get modified or replaced.
                 <br />
                 <br />
                 We understand that every application is going to have some special sauce that does 
@@ -40,7 +40,15 @@ layout: default
     <hr>
 
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
+            <h1 class="text-center"><i class="fa fa-wrench" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Uncompromising</h3>
+            <p>
+                Every part of TransomJS is configurable and then gets out of your way. 
+                If you don't like how something works, write your own plugin or add it directly to the server &mdash; it's your choice! 
+            </p>
+        </div>
+        <div class="col-md-4">
             <h1 class="text-center"><i class="fa fa-rocket" aria-hidden="true"></i></h1>
             <h3 class="text-center">Easy to Get Started</h3>
             <p>
@@ -50,20 +58,12 @@ layout: default
                 front-end that you need and let TransomJS supply it with data!                    
             </p>
         </div>
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-wrench" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Uncompromising</h3>
-            <p>
-                Every part of TransomJS is configurable and gets out of your way. 
-                If you don't like how something works, use your own module or plugin.
-            </p>
-        </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <h1 class="text-center"><i class="fa fa-github" aria-hidden="true"></i></h1>
             <h3 class="text-center">Open Source</h3>
             <p>
                 Released under the MIT License and hosted on GitHub, there's no secrets here!
-                Find a bug or need a feature? Submit a PR, we're happy to have you onboard!
+                Find a bug or need a feature? Drop us an email or submit a PR, we're happy to have you onboard!
             </p>
         </div>
     </div>
