added Conf, core, plugin

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
             TransomJS allows developers to create beautiful REST-APIs with simple metadata. Turn an empty Restify server into a full-fledged API in minutes.
             Need something more? Go ahead, there are lots of built-in integration points and nothing in your way to write your own custom endpoints.             
         </p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Read the Docs</a></p>
     </div>
 </div>
 
@@ -50,10 +50,10 @@ layout: default
         </div>
         <div class="col-md-4">
             <h1 class="text-center"><i class="fa fa-rocket" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to Get Started</h3>
+            <h3 class="text-center">Easy to Use</h3>
             <p>
                 TransomJS lets you get going quickly without limiting your ability to do your own thing.
-                If you need to connect to your data from multiple applications, or simply add some dynamic 
+                Securely connect to data from complex applications, or add dynamic 
                 content to an otherwise static site. Build the SPA or mobile application
                 front-end that you need and let TransomJS supply it with data!                    
             </p>
