--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@ layout: default
                 Transom applications are deployable and scalable anywhere you can run NodeJS.
                 Using standard Node libraries like Restify, Mongoose and Passport, TransomJS gives you all the benefits with minimal effort.
                 TransomJS is based on plugins from the ground up, allowing new ones to be added and existing ones to get modified or replaced.
-                <br />
-                <br />
-                We understand that every application is going to have some special sauce that does 
-                not come from the framework and we've made sure it doesn't get in your way!</p>
+            </p>
+            </p>
+                We understand that every application is going to have some special sauce that does
+                not come from the framework and we've made sure it doesn't get in your way!
               </p>
             </blockquote>
         </div>
-        <div class="col-md-6 text-center">
-            <img src="img/transom-logo.png" alt="" class="img-responsive">
+        <div class="col-md-6" style="background-color:#e0e0e0; margin-top:40px;">
+            <img src="img/transom-logo.png" alt="" class="img-responsive" style="margin:auto;">
         </div>
     </div>
 
