maybe use an image map... or not.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@ layout: default
         </div>
         <div class="col-md-6" style="background-color:#e0e0e0; margin-top:40px;">
             <img src="img/transom-logo.png" alt="" class="img-responsive" style="margin:auto;">
+            
+            <!-- <img src="img/transom-logo.png" alt="" class="img-responsive" style="margin:auto;"usemap="#image-map">
+            <map name="image-map">
+                <area alt="Transom" title="Transom" href="#" onclick="return false;" coords="376,108,12,9" shape="rect">
+                <area alt="Mongoose" title="Mongoose" href="#" onclick="return false;" coords="202,176,5,214" shape="rect">
+                <area alt="Passport" title="Passport" href="#" onclick="return false;" coords="374,236,289,136" shape="rect">
+                <area alt="Restify" title="Restify" href="#" onclick="return false;" coords="45,235,279,288" shape="rect">
+                <area alt="MongoDB" title="MongoDB" href="#" onclick="return false;" coords="19,326,235,388" shape="rect">
+                <area alt="NodeJS" title="NodeJS" href="#" onclick="return false;" coords="399,291,243,371" shape="rect">
+            </map> -->
         </div>
     </div>
 
