reamework to library & twitter

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@ layout: default
             <h2 class="header-light regular-pad">What is TransomJS?</h2>
             <blockquote>
               <p>
-                TransomJS is a rapid API development framework built on top of Restify. 
-                Quickly compose services that 'just work' using pre-built plugins configured with metadata.
+                TransomJS is a rapid API development library built on top of Restify. 
+                Quickly compose services that 'just work' using pre-built plugins configured with JavaScript.
                 Transom applications are deployable and scalable anywhere you can run NodeJS.
                 Using standard Node libraries like Restify, Mongoose and Passport, TransomJS gives you all the benefits with minimal effort.
                 TransomJS is based on plugins from the ground up, allowing new ones to be added and existing ones to get modified or replaced.
             </p>
             </p>
                 We understand that every application is going to have some special sauce that does
-                not come from the framework and we've made sure it doesn't get in your way!
+                not come from the library and we've made sure it doesn't get in your way!
               </p>
             </blockquote>
         </div>
